syntax = "proto3";

package modvalidationany;

import "koinos/options.proto";

message account_id {
   bytes value = 1 [(koinos.btype) = ADDRESS];
}

message allowances_storage {
    repeated allowance allowances = 1;
}

message operation {
    bytes contract_id = 1 [(koinos.btype) = ADDRESS];
    uint32 entry_point = 2;
    bytes args = 3;
}

message allowance {
    bytes tx_id = 1;
    bytes caller = 2 [(koinos.btype) = ADDRESS];
    operation operation = 3;
}

message allow_args {
    operation operation = 2;
}

message get_allowances_result {
    repeated allowance value = 1;
}